styles.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  padding: 1em;
  line-height: 1.25em;
  background-color: #f6f4ec;
}

body, html {
    height: 100%;
}

code, pre {
  font-family: Courier, 'Courier New', monospace;
  font-size: 1rem;
}

code {
  color: #666;
}


a {
    color: #0095DD;
    text-decoration: none;
}

a:hover {
    color: #00539F;
    text-decoration: underline;
}

a.button {
    display: inline-block;
    color: #fff;
    text-decoration: none;
    line-height: 1.25rem;
    box-sizing: border-box;
}

button, a.button {
    border: 0;
    background: #0095DD;
    font-size: 1rem;
    padding: 0.5rem 1rem;
    color: #fff;
}

button:active, button:hover, a.button:active, a.button:hover {
    background: #00539F;
}

button[disabled] {
    background: #ccc;
    color: #666;
}

button[disabled]:hover {
    cursor: not-allowed;
}


p, li {
  margin: 1em 0;
}

li {
    margin: 0.8em 0;
}

input[type=range], input[type=color] {
    vertical-align: bottom;
}

h1, h2, h3 {
    font-weight: normal;
    text-shadow: 0 1px 0 rgba(255,255,255,0.75);
    color: #484848;
}

h1 {
    font-size: 2em;
    line-height: 1.25em;
}

iframe {
    border: none;
    overflow: scroll;
}

/* ---------------------------------------------------------------------------*/
/* layout */
/* ---------------------------------------------------------------------------*/

body.index {
    padding: 0;
    margin: 0;
    min-height: 100vh;
    overflow: auto;
    background: linear-gradient(to top, #d7d3c8 0%,#f6f4ec 100%) center center no-repeat;
}

.page-wrapper {
    display: flex;
    align-items: stretch;
    min-height: 100vh;
}

.sidebar {
    flex: 0 0 auto;
    border-right: 4px solid rgba(0, 0, 0, 0.2);
    width: 280px;
    box-sizing: border-box;
    padding: 0em 1em 1em 1em;
    text-align: center;
}

.viewer-wrapper {
    flex: 1 1 auto;
    overflow: hidden;
    background: red;
}

.viewer {
    margin: 0;
    padding: 0;
    height: 100%;
    box-sizing: border-box;
    width: 100%;
}

/* ---------------------------------------------------------------------------*/
/* main menu */
/* ---------------------------------------------------------------------------*/
.menu {
    text-align: left;
    background: #f6f4ec;
}

.menu ul {
    padding-left: 0;
}
.menu li {
    display: block;
    line-height: 1.4em;
    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
    border-top: 2px solid rgba(255, 255, 255, 0.9);
    margin: 0;
}

.menu a {
    padding: 1em;
    display: block;
}

.menu a:hover {
    text-decoration: none;
    background: rgba(255, 255, 255, 0.5);
}

.sidebar .button {
    width: 100%;
}

/* ---------------------------------------------------------------------------*/
/* custom tabzilla */
/* ---------------------------------------------------------------------------*/

#tabzilla {
    /*position: absolute;
    top: 0;
    right: 0;*/
    float: none;
}

#tabzilla a {
    box-shadow: none;
    margin: 0 auto;
}

#tabzilla a:hover {
    background-color: transparent;
}

#tabzilla:hover:before{
    background-color: #C13832;
}

#tabzilla:before {
    background: #4D4E53;
    left: 50%;
    margin-left: -44px;
}

